--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -84,9 +84,9 @@
     </integer-array>
 
     <!-- Array of output values for keyboard backlight corresponding to the LUX values
-in the config_autoBrightnessLevels array. This array should have size one greater
-than the size of the config_autoBrightnessLevels array.
-This must be overridden in platform specific overlays -->
+         in the config_autoBrightnessLevels array.  This array should have size one greater
+         than the size of the config_autoBrightnessLevels array.
+         This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessKeyboardBacklightValues">
         <item>0</item>
         <item>0</item>
@@ -122,10 +122,10 @@ This must be overridden in platform specific overlays -->
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
 
     <!-- Component name of the service providing network location support. -->
-    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
+    <string name="config_networkLocationProviderPackageName">com.google.android.location</string>
 
     <!-- Component name of the service providing geocoder API support. -->
-    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
+    <string name="config_geocodeProviderPackageName">com.google.android.location</string>
 
     <bool name="config_forceDisableHardwareKeyboard">true</bool>
 </resources>
